unpackaged/main/default/objects/Opportunity/fields/ETSALES_Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Loss_Reason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Not in scope</fullName>
            </value>
            <value>
                <fullName>Short term contract</fullName>
            </value>
            <value>
                <fullName>Stock availability</fullName>
            </value>
            <value>
                <fullName>Credit assessment</fullName>
            </value>
            <value>
                <fullName>Customer Cancelled/Withdrawn</fullName>
            </value>
            <value>
                <fullName>No Vehicle available</fullName>
            </value>
            <value>
                <fullName>No Manpower available</fullName>
            </value>
            <value>
                <fullName>No Service available</fullName>
            </value>
            <value>
                <fullName>Vehicle in Poor Condition</fullName>
            </value>
            <value>
                <fullName>Customer wants More Money</fullName>
            </value>
            <value>
                <fullName>Customer Sold Elsewhere</fullName>
            </value>
            <value>
                <fullName>Management Decision</fullName>
            </value>
            <value>
                <fullName>Vehicle Not Available</fullName>
            </value>
            <value>
                <fullName>Out of Budget</fullName>
            </value>
            <value>
                <fullName>High Mileage</fullName>
            </value>
            <value>
                <fullName>Car Condition</fullName>
            </value>
            <value>
                <fullName>Bought Another Car</fullName>
            </value>
            <value>
                <fullName>Bank Approval</fullName>
            </value>
            <value>
                <fullName>Price too High</fullName>
            </value>
            <value>
                <fullName>Parts Not Available</fullName>
            </value>
            <value>
                <fullName>Quality of Service</fullName>
            </value>
            <value>
                <fullName>Budgetary request</fullName>
            </value>
            <value>
                <fullName>CICPA Issues</fullName>
            </value>
            <value>
                <fullName>Open more than 6 months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>