unpackaged/main/default/objects/Opportunity/fields/ETSALES_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Manager_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>