unpackaged/main/default/objects/Opportunity/fields/ETSALES_Opportunity_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Opportunity_Number__c</fullName>
    <description>to have the reference of SF opportunity to Oracle</description>
    <displayFormat>OPP - {0000}</displayFormat>
    <externalId>true</externalId>
    <label>Opportunity Number</label>
    <type>AutoNumber</type>
</CustomField>