unpackaged/main/default/objects/Opportunity/fields/ETSALES_Prospect_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Prospect_Number__c</fullName>
    <description>to capture the lead number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Prospect Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>