unpackaged/main/default/objects/Opportunity/fields/ETSALES_Quotation_Date__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Quotation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Quotation Date</label>
    <type>Date</type>
</CustomField>