unpackaged/main/default/objects/Opportunity/fields/ETSALES_SA_Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_SA_Oracle_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SA Oracle ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>