unpackaged/main/default/objects/Opportunity/fields/ETSALES_Sales_Agreement_Number__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Sales_Agreement_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Agreement No (Current Contract)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>