unpackaged/main/default/objects/Opportunity/fields/ETSALES_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Head of Sales</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>