unpackaged/main/default/objects/Opportunity/fields/ETSALES_Sector__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Sector__c</fullName>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>Transport And Lease</fullName>
            </value>
            <value>
                <fullName>School</fullName>
            </value>
            <value>
                <fullName>MRO</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>Government</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>