unpackaged/main/default/objects/Opportunity/fields/ETSALES_Tender__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Tender__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tender</label>
    <referenceTo>ETSALES_Tender__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>