unpackaged/main/default/objects/Opportunity/fields/ETSALES_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>ETSALES_Total_Value__c</fullName>
    <label>Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>