unpackaged/main/default/objects/Opportunity/fields/ETT_Tyre_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Auto_Number__c</fullName>
    <label>Tyre Auto Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>