unpackaged/main/default/objects/Opportunity/fields/Exchange__c.field-meta.xml
<CustomField>
    <fullName>Exchange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exchange</label>
    <type>Checkbox</type>
</CustomField>