unpackaged/main/default/objects/Opportunity/fields/Exchange_model__c.field-meta.xml
<CustomField>
    <fullName>Exchange_model__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Exchange model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>