unpackaged/main/default/objects/Opportunity/fields/Existing_Contract_No_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Existing_Contract_No_Previous_Contract__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Contract No (Previous Contract)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>