unpackaged/main/default/objects/Opportunity/fields/Formula1__c.field-meta.xml
<CustomField>
    <fullName>Formula1__c</fullName>
    <formula>(( Amount / Period_crnt__c )-( Amount_Previous_Contract__c / Period_prv__c ))* Period_crnt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>