unpackaged/main/default/objects/Opportunity/fields/GL_Location_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Location_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <lookupFilter>
        <active>false</active>
        <booleanFilter>(1 AND 2) OR (3 OR 4)</booleanFilter>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>equals</operation>
            <valueField>ETSALES_Location__c.GL_Zone_Lookup__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>equals</operation>
            <value>a443z000000fXrKAAU</value>
        </filterItems>
        <filterItems>
            <field>$Source.GL_Zone_Lookup__c</field>
            <operation>equals</operation>
            <value>a443z000000fXrdAAE</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ETSALES_Location__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>