unpackaged/main/default/objects/Opportunity/fields/GL_Project__c.field-meta.xml
<CustomField>
    <fullName>GL_Project__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>GL Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>