unpackaged/main/default/objects/Opportunity/fields/GL_Zone_Lookup__c.field-meta.xml
<CustomField>
    <fullName>GL_Zone_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>GL_Zone__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>