unpackaged/main/default/objects/Opportunity/fields/Insurance_Company__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Company__c</fullName>
    <label>Insurance Company’</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oman Insurance Company</fullName>
            </value>
            <value>
                <fullName>Al Sagr National Insurance Co.</fullName>
            </value>
            <value>
                <fullName>United Fidelity Insurance Company</fullName>
            </value>
            <value>
                <fullName>Wathba Insurance</fullName>
            </value>
            <value>
                <fullName>Salama Insurance</fullName>
            </value>
            <value>
                <fullName>Al Buhaira insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>