unpackaged/main/default/objects/Opportunity/fields/Insurance_No__c.field-meta.xml
<CustomField>
    <fullName>Insurance_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>