unpackaged/main/default/objects/Opportunity/fields/Internal_No__c.field-meta.xml
<CustomField>
    <fullName>Internal_No__c</fullName>
    <formula>Vehicle_Sales_Inventory__r.ETM_Vehicle_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal No.</label>
    <type>Text</type>
</CustomField>