unpackaged/main/default/objects/Opportunity/fields/Investment_Amount_Previous_Contract__c.field-meta.xml
<CustomField>
    <fullName>Investment_Amount_Previous_Contract__c</fullName>
    <label>Investment Amount (Previous Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>