unpackaged/main/default/objects/Opportunity/fields/IsClosedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>IsClosedOpportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsClosedOpportunity</label>
    <type>Checkbox</type>
</CustomField>