unpackaged/main/default/objects/Opportunity/fields/isLeadConverted__c.field-meta.xml
<CustomField>
    <fullName>isLeadConverted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLeadConverted</label>
    <type>Checkbox</type>
</CustomField>