unpackaged/main/default/objects/Opportunity/fields/isLegalContractCreated__c.field-meta.xml
<CustomField>
    <fullName>isLegalContractCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isLegalContractCreated</label>
    <type>Checkbox</type>
</CustomField>