unpackaged/main/default/objects/Opportunity/fields/isPricingCreated__c.field-meta.xml
<CustomField>
    <fullName>isPricingCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPricingCreated</label>
    <type>Checkbox</type>
</CustomField>