unpackaged/main/default/objects/Opportunity/fields/isSalesAgreementCreated__c.field-meta.xml
<CustomField>
    <fullName>isSalesAgreementCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSalesAgreementCreated</label>
    <type>Checkbox</type>
</CustomField>