unpackaged/main/default/objects/Opportunity/fields/Last_Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Annual_Price__c</fullName>
    <formula>IF(ISBLANK(  Annual_AmountFormulla__c ) &amp;&amp; NOT(ISBLANK(  Annual_proposed_amount__c )),Annual_proposed_amount__c ,

IF(ISBLANK(Annual_AmountFormulla__c ) &amp;&amp; ISBLANK( Annual_proposed_amount__c ) ,
 Annual_budget__c ,Annual_AmountFormulla__c  ))</formula>
    <label>Last Annual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>