unpackaged/main/default/objects/Opportunity/fields/Last_Price__c.field-meta.xml
<CustomField>
    <fullName>Last_Price__c</fullName>
    <description>it will check if amount is null it will give error</description>
    <formula>IF(ISBLANK( Amount ) &amp;&amp; NOT(ISBLANK( Proposed_Amount__c )),Proposed_Amount__c ,
     
    IF(ISBLANK(Amount ) &amp;&amp; ISBLANK( Proposed_Amount__c) ,
         ETSALES_Customer_Budget__c,  Amount ))</formula>
    <inlineHelpText>Please provide proposed amount and customer budget</inlineHelpText>
    <label>Last Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>