unpackaged/main/default/objects/Opportunity/fields/Legal_Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Legal_Contract_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Contract Status</label>
    <type>Checkbox</type>
</CustomField>