unpackaged/main/default/objects/Opportunity/fields/List_of_Required_Services__c.field-meta.xml
<CustomField>
    <fullName>List_of_Required_Services__c</fullName>
    <label>List of Required Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>A/C service</fullName>
            </value>
            <value>
                <fullName>Accident Repair</fullName>
            </value>
            <value>
                <fullName>Battery services</fullName>
            </value>
            <value>
                <fullName>Brake service</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Car &amp; Panel Painting</fullName>
            </value>
            <value>
                <fullName>Car Detailing</fullName>
            </value>
            <value>
                <fullName>Car disinfection</fullName>
            </value>
            <value>
                <fullName>Car Wash</fullName>
            </value>
            <value>
                <fullName>Electrical &amp; Computer Diagnostic</fullName>
            </value>
            <value>
                <fullName>Engine Services</fullName>
            </value>
            <value>
                <fullName>Extended Warranty Contract</fullName>
            </value>
            <value>
                <fullName>Gearbox &amp; Transmission services</fullName>
            </value>
            <value>
                <fullName>Headlight alignment</fullName>
            </value>
            <value>
                <fullName>Major service</fullName>
            </value>
            <value>
                <fullName>Minor service</fullName>
            </value>
            <value>
                <fullName>Oil change</fullName>
            </value>
            <value>
                <fullName>Paintless dent removal</fullName>
            </value>
            <value>
                <fullName>Paint Protection Film</fullName>
            </value>
            <value>
                <fullName>Pre-Purchase Inspection</fullName>
            </value>
            <value>
                <fullName>Restoration</fullName>
            </value>
            <value>
                <fullName>Rim &amp; Brake Caliper painting</fullName>
            </value>
            <value>
                <fullName>Rim refurbishment</fullName>
            </value>
            <value>
                <fullName>Service Contract</fullName>
                <isActive>false</isActive>
                <label>Service Contract</label>
            </value>
            <value>
                <fullName>Suspension services</fullName>
            </value>
            <value>
                <fullName>Tire Services</fullName>
            </value>
            <value>
                <fullName>Wheel Alignment</fullName>
            </value>
            <value>
                <fullName>Window tinting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>