unpackaged/main/default/objects/Opportunity/fields/Loss_Reason_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Remarks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Loss Reason Remarks</label>
    <type>TextArea</type>
</CustomField>