unpackaged/main/default/objects/Opportunity/fields/No_of_Drivers_Growth__c.field-meta.xml
<CustomField>
    <fullName>No_of_Drivers_Growth__c</fullName>
    <formula>Number_of_Drivers__c  -  Old_No_of_Drivers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Drivers (Growth)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>