unpackaged/main/default/objects/Opportunity/fields/No_of_other_manpower_Growth__c.field-meta.xml
<CustomField>
    <fullName>No_of_other_manpower_Growth__c</fullName>
    <formula>Number_of_other_manpower__c  -  Old_No_of_other_manpower__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of other manpower (Growth)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>