unpackaged/main/default/objects/Opportunity/fields/No_of_Resources_Growth__c.field-meta.xml
<CustomField>
    <fullName>No_of_Resources_Growth__c</fullName>
    <formula>IF(ISPICKVAL(Type,&#39;New Business&#39;),0,
IF(ISPICKVAL(Type,&#39;Growth Business&#39;),0,
IF(ISBLANK(Old_No_of_Resources__c),0,No_of_Resources__c  -  Old_No_of_Resources__c)
)
)</formula>
    <label>No. of Resources (Growth)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>