unpackaged/main/default/objects/Opportunity/fields/No_of_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>No_of_Vehicles__c</fullName>
    <label>No. of New Vehicles (Current Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>