unpackaged/main/default/objects/Opportunity/fields/number_of_days__c.field-meta.xml
<CustomField>
    <fullName>number_of_days__c</fullName>
    <formula>DATE( YEAR( Mobilization_Date__c ) ,12,31) - Mobilization_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>number of days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>