unpackaged/main/default/objects/Opportunity/fields/Number_of_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Drivers__c</fullName>
    <label>No. of Drivers (Current Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>