unpackaged/main/default/objects/Opportunity/fields/Number_of_other_manpower__c.field-meta.xml
<CustomField>
    <fullName>Number_of_other_manpower__c</fullName>
    <label>No. of other manpower (Current Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>