unpackaged/main/default/objects/Opportunity/fields/Old_No_of_Drivers__c.field-meta.xml
<CustomField>
    <fullName>Old_No_of_Drivers__c</fullName>
    <label>No. of Drivers (Previous Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>