unpackaged/main/default/objects/Opportunity/fields/Old_No_of_other_manpower__c.field-meta.xml
<CustomField>
    <fullName>Old_No_of_other_manpower__c</fullName>
    <label>No. of other manpower(Previous Contract)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>