unpackaged/main/default/objects/Opportunity/fields/Opportunity_Sales_Process__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sales_Process__c</fullName>
    <description>to get information about different Sales Process Involved based on Record Type</description>
    <formula>IF(
RecordType.DeveloperName=&quot;ETSALES_Leasing&quot;  || 
RecordType.DeveloperName=&quot;ETSALES_Manpower&quot; || RecordType.DeveloperName=&quot;ETSALES_Transportation&quot;,
&quot;LeaseTransportManpower&quot;,
IF(RecordType.DeveloperName=&quot;ETSALES_Driving_School_B2B&quot;,&quot;Driving School- B2B&quot;,&quot;ET Sales&quot;
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Sales Process</label>
    <type>Text</type>
</CustomField>