unpackaged/main/default/objects/Opportunity/fields/Oracle_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Order_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Oracle PO Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>