unpackaged/main/default/objects/Opportunity/fields/Parts_Material_Price__c.field-meta.xml
<CustomField>
    <fullName>Parts_Material_Price__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parts/Material Price</label>
    <length>225</length>
    <type>Text</type>
</CustomField>