unpackaged/main/default/objects/Opportunity/fields/Payment_Made__c.field-meta.xml
<CustomField>
    <fullName>Payment_Made__c</fullName>
    <label>Payment Made</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>