unpackaged/main/default/objects/Opportunity/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>5xxxxxxxx</inlineHelpText>
    <label>Phone Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>