unpackaged/main/default/objects/Opportunity/fields/Plate_Color_Master__c.field-meta.xml
<CustomField>
    <fullName>Plate_Color_Master__c</fullName>
    <label>Plate Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plate_Color_Master</valueSetName>
    </valueSet>
</CustomField>