unpackaged/main/default/objects/Opportunity/fields/Possible_cause__c.field-meta.xml
<CustomField>
    <fullName>Possible_cause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Possible cause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>