unpackaged/main/default/objects/Opportunity/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>NULLVALUE(Amount,NULLVALUE(Proposed_Amount__c,ETSALES_Customer_Budget__c))</formula>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>