unpackaged/main/default/objects/Opportunity/fields/Promise_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>Promise_delivery_date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Promise delivery date</label>
    <type>Date</type>
</CustomField>