unpackaged/main/default/objects/Opportunity/fields/Proposed_Amount_Previous_Contract1__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amount_Previous_Contract1__c</fullName>
    <formula>&#39;NA&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposed Amount (Previous Contract)</label>
    <type>Text</type>
</CustomField>