unpackaged/main/default/objects/Opportunity/fields/Quotation_status__c.field-meta.xml
<CustomField>
    <fullName>Quotation_status__c</fullName>
    <defaultValue>&#39;Not Created&#39;</defaultValue>
    <label>Quotation status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Created</fullName>
                <default>true</default>
                <label>Not Created</label>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Submitted for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>