unpackaged/main/default/objects/Opportunity/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sold through Auction</fullName>
            </value>
            <value>
                <fullName>Sold through Showroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>